# sinsy

./: .gitignore  Makefile  Makefile.in  a.wasm  build.sh  config.h.in  config.status  configure  configure.ac  configure~  deploy.py  index.html  package-lock.json  package.json
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
dic/: Makefile  Makefile.am  Makefile.in  english.utf_8.conf  english.utf_8.table
hts_engine_API/: Makefile  config.status
hts_engine_API/autom4te.cache/: output.0  requests  traces.0  traces.1
hts_engine_API/include/: HTS_engine.h
hts_engine_API/lib/: HTS_misc.c  Makefile  Makefile.in
hts_engine_API/lib/.deps/: HTS_audio.Po  HTS_engine.Po  HTS_gstream.Po  HTS_label.Po  HTS_misc.Po  HTS_model.Po  HTS_pstream.Po  HTS_sstream.Po  HTS_vocoder.Po
include/: config.h  config.h.in
lib/: Makefile  Makefile.am  Makefile.in  Sinsy.cpp
lib/.deps/: Sinsy.Po
lib/converter/: ConfManager.cpp  GeneralConf.cpp  GeneralConf.h
lib/converter/.deps/: ConfGroup.Po  ConfManager.Po  Converter.Po  GeneralConf.Po  PhonemeInfo.Po  UnknownConf.Po  util_converter.Po
lib/hts_engine_API/.deps/: HtsEngine.Po  SynthConditionImpl.Po
lib/japanese/.deps/: JConf.Po
lib/label/.deps/: LabelData.Po  LabelMaker.Po  LabelMeasure.Po  LabelPosition.Po  LabelStream.Po  LabelStrings.Po  NoteGroup.Po  NoteLabeler.Po  PhonemeLabeler.Po  SyllableLabeler.Po
lib/score/.deps/: Beat.Po  Dynamics.Po  Key.Po  Mode.Po  Note.Po  Pitch.Po  ScorePosition.Po  Slur.Po  Syllabic.Po  util_score.Po
lib/temporary/.deps/: ScoreDoctor.Po  TempScore.Po
lib/util/: util_types.h
lib/util/.deps/: Configurations.Po  DiphthongConverter.Po  IStringable.Po  InputFile.Po  MacronTable.Po  MultibyteCharRange.Po  OutputFile.Po  PhonemeTable.Po  StringTokenizer.Po  util_string.Po
lib/xml/: XmlParser.cpp
lib/xml/.deps/: XmlData.Po  XmlParser.Po  XmlReader.Po  XmlWriter.Po
tmp_mxl/: bad1.xml
tmp_test/: config.h  parse_test  parse_test.cpp
