
EXTRA_DIST = japanese.euc_jp.conf japanese.euc_jp.table japanese.shift_jis.conf japanese.shift_jis.table japanese.utf_8.conf japanese.utf_8.table japanese.macron english.utf_8.conf english.utf_8.table english.macron

DISTCLEANFILES = *.log *.out *~

MAINTAINERCLEANFILES = Makefile.in

dicdir = @prefix@/dic

dic_DATA = japanese.euc_jp.conf japanese.euc_jp.table japanese.shift_jis.conf japanese.shift_jis.table japanese.utf_8.conf japanese.utf_8.table japanese.macron english.utf_8.conf english.utf_8.table english.macron
